--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+-node_modules
+-www
 .idea
 .temp
 .sass-cache
+-app/bower_components
 coverage
 *.swp
 *.swo
 *.log
 *.DS_Store
+-app/scripts/configuration.js
