--- a/platforms/ios/Prata da Casa/Resources/Resources/GoogleService-Info.plist
+++ b/platforms/ios/Prata da Casa/Resources/Resources/GoogleService-Info.plist
@@ -2,5 +2,39 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
+	<string>ca-app-pub-3940256099942544/2934735716</string>
+	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
+	<string>ca-app-pub-3940256099942544/4411468910</string>
+	<key>CLIENT_ID</key>
+	<string>903930090400-mp3ohaps561jme8va2cc3muodncovj1d.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.903930090400-mp3ohaps561jme8va2cc3muodncovj1d</string>
+	<key>API_KEY</key>
+	<string>AIzaSyCCGMEVv0BCQ8g4a_MRVh-OKW3JLVjS0fg</string>
+	<key>GCM_SENDER_ID</key>
+	<string>903930090400</string>
+	<key>PLIST_VERSION</key>
+	<string>1</string>
+	<key>BUNDLE_ID</key>
+	<string>br.com.pratadacada.app</string>
+	<key>PROJECT_ID</key>
+	<string>pratadacasa-178717</string>
+	<key>STORAGE_BUCKET</key>
+	<string>pratadacasa-178717.appspot.com</string>
+	<key>IS_ADS_ENABLED</key>
+	<true></true>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false></false>
+	<key>IS_APPINVITE_ENABLED</key>
+	<false></false>
+	<key>IS_GCM_ENABLED</key>
+	<true></true>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true></true>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:903930090400:ios:984082b8d8fe07be</string>
+	<key>DATABASE_URL</key>
+	<string>https://pratadacasa-178717.firebaseio.com</string>
 </dict>
 </plist>
