ios internet issues

--- a/platforms/ios/Prata da Casa/Prata da Casa-Info.plist
+++ b/platforms/ios/Prata da Casa/Prata da Casa-Info.plist
@@ -48,18 +48,23 @@
     <key>UIRequiresFullScreen</key>
     <true/>
     <key>NSAppTransportSecurity</key>
-    <dict>
-      <key>NSExceptionDomains</key>
-      <dict>
-        <key>localhost</key>
-        <dict>
-          <key>NSExceptionAllowsInsecureHTTPLoads</key>
-          <true/>
-        </dict>
-      </dict>
-      <key>NSAllowsArbitraryLoads</key>
-      <true/>
-    </dict>
+	<dict>
+	  <key>NSExceptionDomains</key>
+	  <dict>
+		<key>yourserver.com</key>
+		<dict>
+		  <!--Include to allow subdomains-->
+		  <key>NSIncludesSubdomains</key>
+		  <true/>
+		  <!--Include to allow HTTP requests-->
+		  <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+		  <true/>
+		  <!--Include to specify minimum TLS version-->
+		  <key>NSTemporaryExceptionMinimumTLSVersion</key>
+		  <string>TLSv1.1</string>
+		</dict>
+	  </dict>
+	</dict>
     <key>UILaunchStoryboardName</key>
     <string>CDVLaunchScreen</string>
   </dict>
