--- a/platforms/ios/Prata da Casa/Prata da Casa-Info.plist
+++ b/platforms/ios/Prata da Casa/Prata da Casa-Info.plist
@@ -51,7 +51,7 @@
 	<dict>
 	  <key>NSExceptionDomains</key>
 	  <dict>
-		<key>yourserver.com</key>
+		<key>http://ec2-54-233-210-28.sa-east-1.compute.amazonaws.com:9002/</key>
 		<dict>
 		  <!--Include to allow subdomains-->
 		  <key>NSIncludesSubdomains</key>
