internet ios issues

--- a/platforms/ios/Prata da Casa/Prata da Casa-Info.plist
+++ b/platforms/ios/Prata da Casa/Prata da Casa-Info.plist
@@ -49,21 +49,16 @@
     <true/>
     <key>NSAppTransportSecurity</key>
 	<dict>
-	  <key>NSExceptionDomains</key>
-	  <dict>
-		<key>http://ec2-54-233-210-28.sa-east-1.compute.amazonaws.com:9002/</key>
+		<key>NSExceptionDomains</key>
 		<dict>
-		  <!--Include to allow subdomains-->
-		  <key>NSIncludesSubdomains</key>
-		  <true/>
-		  <!--Include to allow HTTP requests-->
-		  <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
-		  <true/>
-		  <!--Include to specify minimum TLS version-->
-		  <key>NSTemporaryExceptionMinimumTLSVersion</key>
-		  <string>TLSv1.1</string>
+			<key>http://ec2-54-233-210-28.sa-east-1.compute.amazonaws.com</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
 		</dict>
-	  </dict>
 	</dict>
     <key>UILaunchStoryboardName</key>
     <string>CDVLaunchScreen</string>
