--- a/platforms/ios/Prata da Casa/Prata da Casa-Info.plist
+++ b/platforms/ios/Prata da Casa/Prata da Casa-Info.plist
@@ -47,11 +47,10 @@
     </array>
     <key>UIRequiresFullScreen</key>
     <true/>
-    <key>NSAppTransportSecurity</key>
-		<dict>
-			<key>NSAllowsArbitraryLoads</key>
-			<true/>
-		</dict>
+    <key>NSAppTransportSecurity</key>  
+	 <dict>  
+		  <key>NSAllowsArbitraryLoads</key><true/>  
+	 </dict>
     <key>UILaunchStoryboardName</key>
     <string>CDVLaunchScreen</string>
   </dict>
